kiln_control/assets/css/kiln_control.css
body {
    background: linear-gradient(to right, rgba(225, 245, 254, 0.7) 0%, rgb(238, 237, 236) 100%);
    background-size: cover;
    background-attachment: fixed;
    font-family: Arial, sans-serif;
    color: #333; /* Darker text for better readability */
}


#status {
    display: flex;
    background: rgba(255, 250, 250, 0.9); /* Soft white with slight opacity */
    flex-wrap: nowrap;
    justify-content: space-between;
    margin-top: 15px;
    color: #444; /* Slightly lighter text */
    border-radius: 7px 7px 0 0;
    border: 1px solid #ccc; /* Lighter border */
}

.status-item {
    flex-basis: calc(25% - 10px);
    margin: 5px;
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
}

.display {
    font-size: 2.5em;
    line-height: 1.2em;
    color: #4897de;
}

.ds-target {
    color: #75890c;
}

#cost {
    color: #ad6b6b;
}

#act_temp {
    color: #7e7b72;
}

.ds-unit {
    font-family: "Arial", sans-serif;
    font-size: .6em;
    color: #7e7b72;
    margin-left: 4px;
}

#target_temp_scale {
    color: #75890c;
}


.ds-state {
    color: #7e7b72;
}

/* For smaller screens */
@media (max-width: 768px) {
    .ds-title {
        font-size: 0.8em; /* Smaller font size */
    }

    .display {
        font-size: 1.3em; /* Smaller font size */
    }

    .status-item {
        flex-basis: 20%; /* Reduces width on smaller screens */
    }
}

.ds-input {
    color: #111111;
    font-family: "Digi", monospace;
    font-size: 24px;
    box-shadow: inset 0 0 12px 0 #737270;
    text-align: right;
    padding: 0 7px 0 0;
}

.bar {
    width: 70%;
/ / padding: 2 px 2 px 0 px 2 px;
/ / display: block;
    display: inline-block;
    font-family: arial, sans-serif;
    font-size: 12px;
    background-color: #ca3c38;
    color: #000;
/ / position: absolute;
/ / bottom: 0;
}

.disabled-button {
    opacity: 0.5;
    cursor: not-allowed;
}

.disabled-button:hover {
    background-color: initial; /* Keep the background color unchanged on hover */
}

.select2-container--default.select2-container--disabled .select2-selection--single {
    background-color: #eee; /* Light gray background for disabled select2 */
    cursor: not-allowed;
}

.ds-led-hazard-active {
    color: rgb(255, 204, 0);
    background: radial-gradient(ellipse at center, rgba(242, 195, 67, 1) 0%, rgba(241, 218, 54, 0.26) 100%); /* W3C */
}

.ds-led-heat-active {
    color: rgb(214, 42, 0);
    background: radial-gradient(ellipse at center, rgba(214, 25, 25, 1) 0%, rgba(214, 42, 0, 0.26) 100%); /* W3C */
}

.ds-trend {
    top: 0;
    text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.25), -1px -1px 0 rgba(0, 0, 0, 0.4);
    color: rgb(233, 233, 233);
    font-size: 20px;
}

.ds-text {
    border: none;
    width: initial;
    font-family: sans-serif;
    font-size: 32px;
}

.progress {
    background: #cbcbcb;
    border-color: #000000;
    border-top: 1px solid #b9b6af;
    margin: 0;
    border-radius: 0 0 7px 7px;;
    margin-bottom: 5px;
}

.progress-bar {
    font-family: "Digi", monospace;
    font-size: 16px;
}

.no-animation {
    animation: none !important;
}

.panel-default {
    background: rgba(164, 164, 164, 0.9); /* Light background for panels */
    border: 1px solid #ddd; /* Light gray border */
    border-radius: 7px 7px 0 0;
}

.panel-heading {
    overflow: hidden;
    padding: 5px;
    background: rgba(250, 250, 250, 0.9); /* Slightly different shade for the heading */
}

#this_header {
    background-image: linear-gradient(to bottom, #8c8b8b 0, #575757 100%);
}

.panel-body {
    background: rgba(68, 68, 68, 0.8); /* Soft white with slight opacity */
}

#profile_selector {
    border: 1px solid rgba(194, 194, 194, 0.7); /* More subtle border color */
    border-radius: 5px; /* Rounded corners */
    background: linear-gradient(to bottom, rgba(245, 245, 245, 1) 0%, rgba(229, 229, 229, 1) 100%); /* Smoother gradient */
    padding: 2px; /* Adjust padding for better spacing */
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Enhanced shadow for depth */
    margin: 0; /* Adjust margin as needed */
    transition: all 0.3s ease; /* Smooth transition for hover effects */
}

#profile_selector:hover {
    background: linear-gradient(to bottom, rgba(255, 255, 255, 1) 0%, rgba(245, 245, 245, 1) 100%); /* Lighter gradient on hover */
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15); /* Larger shadow on hover */
}

.select2-container {
    position: relative;
    top: -3px;
    width: 190px;
    height: 34px;
}

.select2-container .select2-choice {
    line-height: 32px;
}

.graph {
    width: 100%;
    height: 600px;
    font-size: 14px;
    line-height: 1.2em;
}

.edit-points {
    margin-bottom: 5px;
}

.edit-points h3 {
    margin-top: 5px;
    margin-bottom: 15px;
}

.edit-points .row {
    margin-bottom: 5px;
}

.btn-success {
    background: rgb(164, 179, 87);
    background: linear-gradient(to bottom, rgba(164, 179, 87, 1) 0%, rgba(117, 137, 12, 1) 100%);
    background-color: #75890c;
}

.modal-content {
    background-image: linear-gradient(to bottom, #f5f5f5 0, #e8e8e8 100%);
}

.modal-body {
    background: #fafafa;
}

.modal-footer {
    margin-top: 0;
}

.modal-body .table {
    margin-bottom: 0;
}

.select2-container .select2-choice {
    height: 34px;
    margin-top: 1px;
}

.modal.fade.in {
    top: 10%;
}

.alert {
    background-image: linear-gradient(to bottom, #f5f5f5 0, #e8e8e8 100%);
    background-repeat: repeat-x;
    box-shadow: 0 0 1.1em 0 rgba(0, 0, 0, 0.75);
}

.alert-success {
    background: rgb(164, 179, 87);
    background: linear-gradient(to bottom, rgba(164, 179, 87, 1) 0%, rgba(117, 137, 12, 1) 100%);
    color: #fff;
}

.alert-error {
    background: rgb(206, 57, 20);
    background: linear-gradient(to bottom, rgba(206, 57, 20, 1) 0%, rgba(163, 38, 0, 1) 100%);
    color: #fff;
}

.modal-body td {
    width: 50%;
}

.table-responsive {
    overflow-x: hidden;
    overflow-y: hidden;
}

